# deepagent-with-ollama

./: README.md  cli.py  env.example  pyproject.toml  setup.py
core/: __init__.py  agent.py  config.py  tools.py
examples/: cli.py
src/deepagent/: __init__.py  agent.py
