[project]
name = "deepagent"
version = "0.1.0"
description = "Deep Agent implementation using Ollama and DuckDuckGo search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "asyncio>=3.4.3",
]
